// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersQueries getUsers should return a paged list of users: #0 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-01-01T10:21:59.730Z,
      "email": "user2@silvernext.com",
      "id": "45c2c554-b06a-4209-aba8-b097cb5f8566",
      "state": "ACTIVE",
      "updatedAt": 2020-01-05T08:21:59.730Z,
    },
    User {
      "createdAt": 2020-01-02T09:21:59.730Z,
      "email": "user5@silvernext.com",
      "id": "af965f04-8c7d-4e20-b230-932b0ff3a33f",
      "state": "REGISTERING",
      "updatedAt": 2020-01-02T09:21:59.730Z,
    },
    User {
      "createdAt": 2019-01-01T08:32:59.730Z,
      "email": "user4@silvernext.com",
      "id": "c356fce8-9f95-4c69-9e71-8f4d74f49b8f",
      "state": "ACTIVE",
      "updatedAt": 2020-01-02T08:59:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "user1@silvernext.com",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "user3@silvernext.com",
      "id": "db5e788c-2642-4c40-a63a-f13675048ddc",
      "state": "REGISTERING",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
  ],
  "meta": Object {
    "count": 5,
    "totalCount": 5,
  },
}
`;

exports[`UsersQueries getUsers should return a paged list of users: #1 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2019-01-01T08:32:59.730Z,
      "email": "user4@silvernext.com",
      "id": "c356fce8-9f95-4c69-9e71-8f4d74f49b8f",
      "state": "ACTIVE",
      "updatedAt": 2020-01-02T08:59:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "user1@silvernext.com",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
  ],
  "meta": Object {
    "count": 2,
    "totalCount": 5,
  },
}
`;

exports[`UsersQueries getUsers should return a paged list of users: #2 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "user1@silvernext.com",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
  ],
  "meta": Object {
    "count": 1,
    "totalCount": 1,
  },
}
`;

exports[`UsersQueries getUsers should return a paged list of users: #3 1`] = `
Object {
  "data": Array [
    User {
      "createdAt": 2019-01-01T08:32:59.730Z,
      "email": "user4@silvernext.com",
      "id": "c356fce8-9f95-4c69-9e71-8f4d74f49b8f",
      "state": "ACTIVE",
      "updatedAt": 2020-01-02T08:59:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "user1@silvernext.com",
      "id": "49affd08-f461-4e80-899f-7612e971ff12",
      "state": "ACTIVE",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T08:21:59.730Z,
      "email": "user3@silvernext.com",
      "id": "db5e788c-2642-4c40-a63a-f13675048ddc",
      "state": "REGISTERING",
      "updatedAt": 2020-01-01T08:21:59.730Z,
    },
    User {
      "createdAt": 2020-01-01T10:21:59.730Z,
      "email": "user2@silvernext.com",
      "id": "45c2c554-b06a-4209-aba8-b097cb5f8566",
      "state": "ACTIVE",
      "updatedAt": 2020-01-05T08:21:59.730Z,
    },
    User {
      "createdAt": 2020-01-02T09:21:59.730Z,
      "email": "user5@silvernext.com",
      "id": "af965f04-8c7d-4e20-b230-932b0ff3a33f",
      "state": "REGISTERING",
      "updatedAt": 2020-01-02T09:21:59.730Z,
    },
  ],
  "meta": Object {
    "count": 5,
    "totalCount": 5,
  },
}
`;

exports[`UsersQueries getUsers should return an empty list if no users found 1`] = `
Object {
  "data": Array [],
  "meta": Object {
    "count": 0,
    "totalCount": 0,
  },
}
`;
